Sonar-related fixes